--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ablarva website repo",
+  "name": "Ablarva website repo test",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
